arrow position effect added to dropdown

--- a/javascript/click.html
+++ b/javascript/click.html
@@ -7,16 +7,17 @@
 
 	</head>
 	<body>
+		<p id="posi">click to show</br> Double Click to hide</p>
 		<div id="base">
-	  <div id="class-base" onclick="showCoords(event)">
+	  <div id="class-base" onclick="showCoords(event)" ondblclick="cloze1()">
 	  	<p id="demo"></p>
 		</div>
-		<div id="class-base2"  onclick="showCoords(event)">
+		<div id="class-base2"  onclick="showCoords(event)" ondblclick="cloze2()">
 			<p id="demos"></p>
 		</div>
 		</div>
 		
 		<script type="text/javascript" src="index.js"></script>
-		<p id="posi" >hello</p>
+		
 	</body>
 </html> 
